--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ledrun",
-  "version": "1.0.0",
-  "description": "Blink a led to show that program is running on Raspberry PI with Node.js",
+  "version": "1.0.1",
+  "description": "Blink a led to show that program is running on Raspberry PI with Node.js using pigpio",
   "main": "ledrun.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,6 @@
   },
   "homepage": "https://github.com/rafaelquines/ledrun#readme",
   "dependencies": {
-    "onoff": "^1.1.2"
+    "pigpio": "^0.4.0"
   }
 }
