--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ before_install:
 script:
   - npm install
   - npm run build
+after_script:
+  notifications:
+    recipients:
+      -rafaelquines@gmail.com
