--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,9 @@ install:
 script:
   - npm run build
   - npm run lint
+deploy:
+  provider: npm
+  email: "rafaelquines@gmail.com"
+  api_key: "734e57f0-a62f-48ec-894e-f78e24966bf0"
+  on:
+    tags: true
