--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
         "eslint": "^5.0.1",
         "gulp": "^3.9.1",
         "gulp-uglify": "^3.0.0"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
